// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas componentes <GifGrid /> debe de mostrar <GifGridItem/> correctamente 1`] = `
<Fragment>
  <h3>
    luna
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas componentes <GifGrid /> debe de mostrar items cuando se cargar imagenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    luna
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier.jpg"
    />
  </div>
</Fragment>
`;
